--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,6 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: rustproof;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -13,7 +11,9 @@ code {
 }
 
 .app {
-  background: #209cee;
+  background: rgb(2,0,36);
+  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 34%, rgba(0,212,255,1) 100%);
+  /* background: #209cee; */
   padding: 30px;
   height: 100vh;
 }
@@ -30,6 +30,7 @@ code {
   box-shadow: 1px 1px 1px rgba(0,0,0, 0.15);
   padding: 3px 10px;
   font-size: 24px;
+  font-family: pixelboy;
   margin-bottom: 6px;
   border-radius: 3px;
   display:flex;
@@ -46,4 +47,16 @@ code {
   padding: 1rem;
   height: 2.25em;
   font-size: 24px;
+  color: darkslategrey;
+  font-family: pixelboy;
+}
+
+@font-face {
+  font-family: rustproof;
+  src: url(fonts/RUSTPROO.TTF);
+}
+
+@font-face {
+  font-family: pixelboy;
+  src: url(fonts/Pixeboy-z8XGD.ttf);
 }
